pod1.yml
apiVersion: v1
kind: Pod
metadata:
  name: pod1
  namespace: yadav
  labels:  
    app: linux
spec:
  containers:
  - image: linuxserver/firefox
    name: firefox-container
    ports:
      - containerPort: 3000
