pod2.yml
apiVersion: v1
kind: Pod
metadata:
  name: pod2
  namespace: yadav
  labels:
    app: frontend
spec:
  containers:
  - image: nginx
    name: nginx-container
    ports:
    - containerPort: 80
