networkpolicy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: baaty-band
  namespace: yadav
spec:
  ingress:
  -  ports:
     - port: 80
  podSelector:
    matchLabels:
      app: frontend
